<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProjectHome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:text="My Nanodegree Apps"
        android:textColor="@color/button_text"
        android:textSize="30sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_project_spotify"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="displayToast"
                android:text="@string/title_project_1"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button_project_scores"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="displayToast"
                android:text="@string/title_project_2"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button_project_library"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="displayToast"
                android:text="@string/title_project_3"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button_project_gradle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="displayToast"
                android:text="@string/title_project_4"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button_project_reader"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="displayToast"
                android:text="@string/title_project_5"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/button_project_capstone"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:onClick="displayToast"
                android:text="@string/title_project_capstone"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
